Colaboratory를 통해 생성됨

--- a/kakao_local_api/Kakao_로컬_API를_이용한_공간데이터_검색_기능_소개.ipynb
+++ b/kakao_local_api/Kakao_로컬_API를_이용한_공간데이터_검색_기능_소개.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "8363c72f-9ad3-4b16-a5c2-a07bd045a502",
       "metadata": {
         "id": "8363c72f-9ad3-4b16-a5c2-a07bd045a502"
@@ -39,14 +39,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "e8b5356f-3265-453c-869d-72fe5ffe2d81",
       "metadata": {
         "id": "e8b5356f-3265-453c-869d-72fe5ffe2d81"
       },
       "outputs": [],
       "source": [
-        "api_key = '57bb1cdf403802631778c8835c733a89'"
+        "api_key = 'my-api-key'"
       ]
     },
     {
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "b08f9cf8-1b4f-471d-9a56-02b0a7955941",
       "metadata": {
         "id": "b08f9cf8-1b4f-471d-9a56-02b0a7955941",
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "ac5d4df9-f779-40da-b1f7-3fe632363694",
       "metadata": {
         "id": "ac5d4df9-f779-40da-b1f7-3fe632363694",
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "d70db218-730c-480b-9e4d-4cb4fbb1b9c6",
       "metadata": {
         "id": "d70db218-730c-480b-9e4d-4cb4fbb1b9c6",
@@ -408,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "f6e5e0f9-72e0-4153-8a50-b04eabaffaf7",
       "metadata": {
         "id": "f6e5e0f9-72e0-4153-8a50-b04eabaffaf7",
@@ -614,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "6569208c-fd46-41ac-a5e5-2c6da385af07",
       "metadata": {
         "id": "6569208c-fd46-41ac-a5e5-2c6da385af07"
@@ -647,7 +647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1f3e7a53-f1a3-4d50-b8e1-3de65a936915",
       "metadata": {
         "id": "1f3e7a53-f1a3-4d50-b8e1-3de65a936915"
@@ -675,7 +675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "a8560bc1-45b4-43c6-a37d-d4ccdf46df51",
       "metadata": {
         "id": "a8560bc1-45b4-43c6-a37d-d4ccdf46df51",
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "97a3cf01-c712-4135-a13d-75b8a9881488",
       "metadata": {
         "id": "97a3cf01-c712-4135-a13d-75b8a9881488",
@@ -974,7 +974,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "8d63e52a-aa65-4051-850a-f2ee1169a89d",
       "metadata": {
         "id": "8d63e52a-aa65-4051-850a-f2ee1169a89d",
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "5af59e97-1e5b-422e-a950-8d8610186ed0",
       "metadata": {
         "id": "5af59e97-1e5b-422e-a950-8d8610186ed0"
@@ -1104,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "ca796fa9-e35a-4951-bd96-3c8166050e85",
       "metadata": {
         "id": "ca796fa9-e35a-4951-bd96-3c8166050e85",
@@ -1302,7 +1302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "2fbe147b-f417-40d6-a766-dc30e39e2a10",
       "metadata": {
         "id": "2fbe147b-f417-40d6-a766-dc30e39e2a10",
