Colaboratory를 통해 생성됨

--- a/kakao_local_api/Kakao_로컬_API를_이용한_공간데이터_검색_기능_소개.ipynb
+++ b/kakao_local_api/Kakao_로컬_API를_이용한_공간데이터_검색_기능_소개.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "id": "8363c72f-9ad3-4b16-a5c2-a07bd045a502",
       "metadata": {
         "id": "8363c72f-9ad3-4b16-a5c2-a07bd045a502"
@@ -38,14 +38,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "id": "e8b5356f-3265-453c-869d-72fe5ffe2d81",
       "metadata": {
         "id": "e8b5356f-3265-453c-869d-72fe5ffe2d81"
       },
       "outputs": [],
       "source": [
-        "api_key = \"57bb1cdf403802631778c8835c733a89\""
+        "api_key = '57bb1cdf403802631778c8835c733a89'"
       ]
     },
     {
@@ -62,27 +62,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "id": "b08f9cf8-1b4f-471d-9a56-02b0a7955941",
       "metadata": {
         "id": "b08f9cf8-1b4f-471d-9a56-02b0a7955941",
-        "outputId": "8773e8c7-792c-4b64-d22c-b459054a5877",
+        "outputId": "121dc0df-3347-423b-cdae-be6767a18fd6",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 327
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "'meta'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-efaece27e064>\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mkeyword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"서울시립대학교\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mcoordinate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_coordinate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoordinate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-12-efaece27e064>\u001b[0m in \u001b[0;36mget_coordinate\u001b[0;34m(keyword, api_key)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"meta\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"total_count\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0;31m# 첫 번째 검색 결과의 좌표만 반환\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'documents'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'y'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'documents'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'meta'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error: HTTP status code 429\n",
+            "None\n"
           ]
         }
       ],
@@ -92,6 +87,12 @@
         "    url = f'https://dapi.kakao.com/v2/local/search/keyword.json?query={keyword}'\n",
         "    headers = {'Authorization': f'KakaoAK {api_key}'}\n",
         "    response = requests.get(url, headers=headers)\n",
+        "\n",
+        "    # HTTP 상태 코드 체크\n",
+        "    if response.status_code != 200:\n",
+        "        print(f'Error: HTTP status code {response.status_code}')\n",
+        "        return None\n",
+        "\n",
         "    data = response.json()\n",
         "    if data['meta']['total_count'] > 0:\n",
         "        # 첫 번째 검색 결과의 좌표만 반환\n",
