Colaboratory를 통해 생성됨

--- a/kakao_local_api/Kakao_로컬_API로_사각형_범위_내_항목_검색하기.ipynb
+++ b/kakao_local_api/Kakao_로컬_API로_사각형_범위_내_항목_검색하기.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmKkp/PLciG8CVr8Mu2mhW",
+      "authorship_tag": "ABX9TyPc6HPNFA9e0/0+PvKHuWBT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7906,7 +7906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "3JLTa61gJdeh"
       },
@@ -7923,12 +7923,12 @@
     {
       "cell_type": "code",
       "source": [
-        "api_key = '57bb1cdf403802631778c8835c733a89'"
+        "api_key = 'my-api-key'"
       ],
       "metadata": {
         "id": "CXMvreu_JiVR"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7969,7 +7969,7 @@
         "id": "5J86Eo9gJljA",
         "outputId": "7836c2fc-9ffa-4e23-bf31-21fda2d581d1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8048,7 +8048,7 @@
         "id": "WFWUvVMgbjQA",
         "outputId": "4afc0a44-6567-4ed8-da4c-b66a37867f8e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8138,7 +8138,7 @@
         "id": "Q3-cw_CVOuGo",
         "outputId": "7ba46f81-58d9-45e2-9f2f-71e1f787385a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8221,7 +8221,7 @@
       "metadata": {
         "id": "MvcTaE3SPIO2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8252,7 +8252,7 @@
         "id": "mdQjzpTHQc5p",
         "outputId": "eb6c7909-fc54-4e73-eb4c-5b2310535221"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8451,7 +8451,7 @@
         "id": "Djye7vbcRP8U",
         "outputId": "95c3c9ee-10e0-4618-8978-ea4d197fbcf4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8604,7 +8604,7 @@
         "id": "-jRLsRcdRECd",
         "outputId": "edfa02b6-d1b3-46f7-e1b4-5ba3bf3ae4bc"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
