Colaboratory를 통해 생성됨

--- a/kakao_local_api/Kakao_로컬_API로_사각형_범위_내_항목_검색하기.ipynb
+++ b/kakao_local_api/Kakao_로컬_API로_사각형_범위_내_항목_검색하기.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPc6HPNFA9e0/0+PvKHuWBT",
+      "authorship_tag": "ABX9TyO1hxECwZqCJpxBiABCvzE7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8001,20 +8001,24 @@
         "    m_per_degree = km_per_degree * 1000\n",
         "\n",
         "    # 너비와 높이를 도 단위로 변환\n",
+        "\n",
         "    width_degree = width / (m_per_degree * np.cos(np.radians(center_lat)))\n",
         "    height_degree = height / m_per_degree\n",
         "\n",
         "    # 사각형의 너비와 높이를 도 단위로 변환\n",
+        "\n",
         "    distance_degree_lat = distance / m_per_degree\n",
         "    distance_degree_lon = distance / (m_per_degree * np.cos(np.radians(center_lat)))\n",
         "\n",
         "    # 전체 영역의 좌상단과 우하단 좌표 계산\n",
+        "\n",
         "    top_left_lat = center_lat + (height_degree / 2)\n",
         "    top_left_lon = center_lon - (width_degree / 2)\n",
         "    bottom_right_lat = center_lat - (height_degree / 2)\n",
         "    bottom_right_lon = center_lon + (width_degree / 2)\n",
         "\n",
         "    # 사각형의 개수 계산\n",
+        "\n",
         "    num_rects_lat = int(np.ceil(height / distance))\n",
         "    num_rects_lon = int(np.ceil(width / distance))\n",
         "\n",
@@ -8023,21 +8027,34 @@
         "    for i in range(num_rects_lat):\n",
         "        for j in range(num_rects_lon):\n",
         "            # 각 사각형의 좌상단 좌표\n",
+        "\n",
         "            rect_top_left_lat = top_left_lat - (i * distance_degree_lat)\n",
         "            rect_top_left_lon = top_left_lon + (j * distance_degree_lon)\n",
         "            # 각 사각형의 우하단 좌표\n",
-        "            rect_bottom_right_lat = max(rect_top_left_lat - distance_degree_lat, bottom_right_lat)\n",
-        "            rect_bottom_right_lon = min(rect_top_left_lon + distance_degree_lon, bottom_right_lon)\n",
         "\n",
-        "            rectangles.append(((rect_top_left_lat, rect_top_left_lon), (rect_bottom_right_lat, rect_bottom_right_lon)))\n",
+        "            rect_bottom_right_lat = max(\n",
+        "                rect_top_left_lat - distance_degree_lat, bottom_right_lat\n",
+        "            )\n",
+        "            rect_bottom_right_lon = min(\n",
+        "                rect_top_left_lon + distance_degree_lon, bottom_right_lon\n",
+        "            )\n",
         "\n",
+        "            rectangles.append(\n",
+        "                (\n",
+        "                    (rect_top_left_lat, rect_top_left_lon),\n",
+        "                    (rect_bottom_right_lat, rect_bottom_right_lon),\n",
+        "                )\n",
+        "            )\n",
         "    return rectangles\n",
         "\n",
+        "\n",
         "# 직사각형의 너비와 높이\n",
+        "\n",
         "width, height = 2000, 1000\n",
         "distance = 250\n",
         "\n",
         "# 직사각형 계산\n",
+        "\n",
         "rectangles = calculate_rectangles(coordinate[0], coordinate[1], width, height, distance)\n",
         "print(f\"개수: {len(rectangles)}개\")"
       ],
@@ -8169,21 +8186,14 @@
       "source": [
         "## 범위 내 항목 검색\n",
         "\n",
-        "로컬 API에서 제공하는 항목 중 카페(`CE7`)을 검색해 보겠습니다. 250x250m 내에서 카페가 45개 최대값으로 제공되는 경우에는 `사각형 범위 내 45개 초과`라는 메시지가 반환되도록 하였습니다."
-      ],
-      "metadata": {
-        "id": "NnUP567KTRB-"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "로컬 API에서 제공하는 항목 중 카페(`CE7`)을 검색해 보겠습니다. 250x250m 내에서 카페가 45개 최대값으로 제공되는 경우에는 `사각형 범위 내 45개 초과`라는 메시지가 반환되도록 하였습니다.\n",
+        "\n",
         "| 이름 | MT1 | CS2 | PS3 | SC4 | AC5 | PK6 | OL7 | SW8 | BK9 | CT1 | AG2 | PO3 | AT4 | AD5 | FD6 | CE7 | HP8 | PM9 |\n",
         "|------|------|------|------|------|------|------|------|------|------|------|------|------|------|------|------|------|------|------|\n",
         "| 설명 | 대형마트 | 편의점 | 어린이집, 유치원 | 학교 | 학원 | 주차장 | 주유소, 충전소 | 지하철역 | 은행 | 문화시설 | 중개업소 | 공공기관 | 관광명소 | 숙박 | 음식점 | 카페 | 병원 | 약국 |"
       ],
       "metadata": {
-        "id": "GjHsU6HBT325"
+        "id": "NnUP567KTRB-"
       }
     },
     {
